--- a/siir_ozelklip_index.html
+++ b/siir_ozelklip_index.html
@@ -86,10 +86,10 @@ SEN BİR MÜCİZESİN
 
 Çölde uzaktan kopup gelen bir esinti gibi 
 Hayatımın en güzel, en gerçek hikâyesi 
-Hayat yolumu aydınlatan olağanüstü kadın 
+Hayat yolumu aydınlatan eşsiz kadın 
 Ruhuma huzur üflüyor bana her bakışın 
 
-Canımın günü günün kutlu olsun 
+Canımın içi doğum günün kutlu olsun 
 Yaşamının her günü bayram olsun 
 
 Sabahımın parlak güneşi, ilk şuâsı 
