--- a/siir_ozelklip_index.html
+++ b/siir_ozelklip_index.html
@@ -82,7 +82,7 @@
 
   <div class="poem-container">
     <div class="poem">
-SEN BİR MÜCİZESİN
+SEN BİR MUCİZESİN
 
 Çölde uzaktan kopup gelen bir esinti gibi 
 Hayatımın en güzel, en gerçek hikâyesi 
